# endpoint.py
@@ -1,6 +1,6 @@
 from flask import make_response, abort, jsonify, request
 from config import db
-from models import Endpoint, DeserializeEndpoint, Training
+from models import Endpoint, Training
 
 
 def getAllEndpoint():
@@ -9,9 +9,9 @@ def getAllEndpoint():
     return jsonify(endpoints=[endpoint.serialize() for endpoint in endpoints]) 
 
 
-def newEndpoint(training_id, endpoint):
+def newEndpoint(endpoint):
 
-    training = Training.query.filter(Training.training_id == training_id).one_or_none()
+    training = Training.query.filter(Training.training_id == endpoint.get("training_id")).one_or_none()
     
     if training is not None:
         newEndpoint =  Endpoint(endpoint_id = endpoint.get("endpoint_id"), endpoint_name = endpoint.get("endpoint_name"))
@@ -27,9 +27,9 @@ def newEndpoint(training_id, endpoint):
 
     
 
-def getEndpointById(training_id, endpoint_id):
+def getEndpointById(endpoint_id):
 
-    endpoint =  Endpoint.query.join(Training, Training.training_id == Endpoint.training_id).filter(Training.training_id == training_id).filter(Endpoint.endpoint_id == endpoint_id).one_or_none()
+    endpoint =  Endpoint.query.join(Training, Training.training_id == Endpoint.training_id).filter(Endpoint.endpoint_id == endpoint_id).one_or_none()
 
     if endpoint is not None:
         return jsonify(endpoint.serialize())
@@ -37,10 +37,10 @@ def getEndpointById(training_id, endpoint_id):
         abort(404, "Endpoint not found for Id: {endpoint_id}".format(endpoint_id=endpoint_id),)
 
 
-def updateEndpoint(training_id, endpoint_id, endpoint):
+def updateEndpoint(endpoint_id, endpoint):
 
     
-    update_endpoint = Endpoint.query.filter(Training.training_id == training_id).filter(Endpoint.endpointid == endpoint_id).one_or_none()
+    update_endpoint = Endpoint.query.filter(Endpoint.endpoint_id == endpoint_id).one_or_none()
 
     if update_endpoint is not None:
 
@@ -54,9 +54,9 @@ def updateEndpoint(training_id, endpoint_id, endpoint):
         abort(404, "Endpoint not found for Id: {endpoint_id}".format(endpoint_id = endpoint_id))
 
 
-def deleteEndpoint(training_id, endpoint_id):
+def deleteEndpoint(endpoint_id):
 
-    endpoint = Endpoint.query.filter(Training.training_id == training_id).filter(Endpoint.endpointid == endpoint_id).one_or_none()
+    endpoint = Endpoint.query.filter(Endpoint.endpoint_id == endpoint_id).one_or_none()
 
     if endpoint is not None:
         db.session.delete(endpoint)
@@ -72,19 +72,3 @@ def deleteEndpoint(training_id, endpoint_id):
         )
 
 
-'''
-CORPO DELLA POST 
-    endpoint_name = endpoint.get("endpoint_name")
-    endpoint_training_id = endpoint.get("training_id")
-    existing_endpoint = Endpoint.query.filter(Endpoint.endpoint_name == endpoint_name).filter(Endpoint.training_id == endpoint_training_id).one_or_none()
-    if existing_endpoint is  None:
-        newEndpoint =  Endpoint(endpoint_id = endpoint.get("endpoint_id"), endpoint_name = endpoint.get("endpoint_name"))
-
-        db.session.add(newEndpoint)
-        db.session.commit()
-
-        return jsonify(newEndpoint.serialize()), 201
-
-    else:
-        abort(409,"Endpoint {endpoint_name} exists already".format(endpoint_name=endpoint_name),)
-'''
